# snippets

./: #playground.org#  .gitignore  .travis.yml  Cargo.toml  README.org  aliases.js  default.nix  playground.org  playground.tex  search-index.js  settings.html  source-files.js
abc/: 1.json  2.json  3.json  4.json
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js  trait.Visitor.js
snippets/: all.html  index.html  macro.rocket_uri_macro_create.html  macro.rocket_uri_macro_index.html  sidebar-items.js
snippets/endpoints/: fn.create.html  fn.endpoints.html  fn.index.html  fn.rocket_route_fn_create.html  fn.rocket_route_fn_index.html  index.html  sidebar-items.js  static.static_rocket_route_info_for_create.html  static.static_rocket_route_info_for_index.html  struct.CreatePayload.html  type.Repo.html
snippets/repository/: index.html  sidebar-items.js  struct.FileRepository.html  trait.Repository.html
snippets/snippet/: constant._IMPL_DESERIALIZE_FOR_Snippet.html  constant._IMPL_DESERIALIZE_FOR_Tags.html  constant._IMPL_SERIALIZE_FOR_Snippet.html  constant._IMPL_SERIALIZE_FOR_Tags.html  index.html  sidebar-items.js  struct.Snippet.html  struct.Tags.html  type.SnippetId.html
src/: endpoints.rs  lib.rs  main.rs  repository.rs  snippet.rs  snippet_routes.rs
src/snippets/: endpoints.rs.html  lib.rs.html  repository.rs.html  snippet.rs.html
templates/: base.html.tera  index.html.tera
(+6 files in other folders)
